--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,13 @@ header h1 {
 /* Nav Bar Styling */
 
 nav {
-    background-color: #4e828d;
-    border-top: 2px solid #4e828d;
-    border-bottom: 2px solid #4e828d;
+background-color: #4e828d;
+border-top: 2px solid #4e828d;
+border-bottom: 2px solid #4e828d;
 }
 
 nav ul {
+    list-style: none;
     text-align: center;
     padding: 0;
 }
@@ -39,7 +40,6 @@ nav ul li {
 
     width: 14%;
     font-size: 1.2em;
-    display: inline-block;
     text-decoration: none;
     padding: 0 15px;
 }
@@ -55,6 +55,15 @@ nav a:hover {
     background-color: white;
     border-radius: 3px;
     color: #335766;
+}
+
+nav,
+nav ul {
+    display: flex;
+}
+
+nav ul li {
+    flex: 1;
 }
 
 /* Main Content Styling */
