Flexbox layout tweak

--- a/flexbox_text/styles.css
+++ b/flexbox_text/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 img {
-    width : 30%;
+    width : 15%;
     max-width: 120px;
     display: block;
     margin: auto;
@@ -20,11 +20,11 @@ img {
 
 header h1 {
     text-align: center;
-    font-size: 7.5vw;
+    font-size: 8vw;
     color: #335766;
     letter-spacing: .15em;
     padding-bottom: 10px;
-    margin-bottom: 0px;
+    margin: 15px 0 10px;
 }
 
 nav {
@@ -51,7 +51,7 @@ nav {
 }
 
 .navButton a:hover {
-    color: #335766;
+    background-color: #335766;
 }
 
 .Site-content {
@@ -62,15 +62,15 @@ footer {
     height: 70px;
     background-color: #335766;
     color: white;
-    text-align: right;
+    text-align: center;
     font-size: 1.2em;
 }
 
-footer p {
-    margin-right: 30px;
-}
-
 @media screen and (min-width: 480px) {
+    header img {
+        max-height: 100px;
+    }
+    
     nav {
         flex-direction: row;
         /* align-items: flex-start;
@@ -80,6 +80,14 @@ footer p {
     .navButton {
         /* justify-content: space-between; */
         flex: 1;
+    }
+
+    footer {
+        text-align: right;
+    }
+    
+    footer p {
+        margin-right: 30px;
     }
 }
 
@@ -92,7 +100,7 @@ footer p {
     }
 
     header img {
-        margin: 0;
+        margin: 0 0 10px;
     }
 
     header h1 {
