--- a/blog/css/blog.css
+++ b/blog/css/blog.css
@@ -98,3 +98,8 @@ button:hover {
     background-color: rgba(255, 255, 255, 0.2);
     color: black
 }
+
+#searchFailure {
+    padding: 20px;
+    font-size: 2em;
+}
